--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -57,23 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-05T14:48:08.352716Z",
-     "start_time": "2019-08-05T14:48:08.326389Z"
+     "end_time": "2019-08-12T13:01:50.522965Z",
+     "start_time": "2019-08-12T13:01:50.506876Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# to automatically import utils when it changes\n",
     "%load_ext autoreload\n",
@@ -91,16 +82,17 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 252,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-02T08:59:19.959624Z",
-     "start_time": "2019-08-02T08:59:19.946693Z"
+     "end_time": "2019-08-06T13:18:48.111225Z",
+     "start_time": "2019-08-06T13:18:48.097518Z"
     }
    },
    "outputs": [],
@@ -109,7 +101,8 @@
     "addresses_path = data_folder + 'addresses.csv'\n",
     "active_addresses_path = data_folder + 'active_addresses.csv'\n",
     "implicit_active_addresses_path = data_folder + 'implicit_active_addresses.csv'\n",
-    "clusters_path = data_folder + 'clusters.csv'"
+    "clusters_path = data_folder + 'clusters.csv'\n",
+    "payment_flows_folder = data_folder + 'payment_flows/'"
    ]
   },
   {
