--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -2442,7 +2442,8 @@
    "source": [
     "#### Comments\n",
     "- There are many clusters that were active before 2018 and that deal with large sums. What kind of entities are they?\n",
-    "- Interesting to see that some money goes into the same cluster of the Binance hack."
+    "- Interesting to see that some money goes into the same cluster of the Binance hack.\n",
+    "- Some money is also sent into other sextortion-related clusters, sort of aggregation point.\n"
    ]
   }
  ],
